--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,14 @@
 #  \ \_____\ \ \_\ \_\ \ \____- \ \_____\ \ \_\ \ \_\
 #   \/_____/  \/_/\/_/  \/____/  \/_____/  \/_/  \/_/
 #
+# This project is a part of the “Byte-Sized JavaScript” videocast.
+#
+# You can watch “Byte-Sized JavaScript” at: https://bytesized.tv/
+#
+# MIT Licensed — See LICENSE.md
+#
+# Send your comments, suggestions, and feedback to me@volkan.io
+#
 
 language: node_js
 node_js:
