--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "abstract",
     "native"
   ],
-  "author": "Volkan Özçelik <me@volkan.io>",
+  "author": "Volkan Özçelik <me@volkan.io> (https://volkan.io)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/jsbites/badem/issues"
