--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "badem",
-  "version": "0.5.2",
+  "version": "0.5.3",
   "description": "badem is an abstract component composer that does not require a DOM.",
   "main": "dist/index.js",
   "directories": {
@@ -13,10 +13,7 @@
     "build:js": "bin/build-js.sh",
     "build": "bin/build.sh"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/jsbites/badem.git"
-  },
+  "repository": "git+https://github.com/jsbites/badem.git",
   "keywords": [
     "badem",
     "composition",
