--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 #
 # This project is a part of the “Byte-Sized JavaScript” videocast.
 #
-# You can watch “Byte-Sized JavaScript” at: https://bit.ly/bytesized
+# You can watch “Byte-Sized JavaScript” at: https://bytesized.tv/
 #
 # MIT Licensed — See LICENSE.md
 #
@@ -57,3 +57,5 @@ dist/**/*
 # IDE-Specific:
 .idea
 .c9
+.history
+.vscode
